[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot for file sharing"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "20.6"
httpx = "~0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

